--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Professional quoting and proposal generation platform for businesses to create, manage, and track commercial quotes and invoices." />
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
 
   <!-- Premium Fonts for Classy Design -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
